# OSMLocalizer

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  Readme.md  deploy.sh  docker-compose.yml  example.env  pyproject.toml  wsgi.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: update-backend-dependencies.yml
backend/: __init__.py  config.py  enum.py  errors.json  errors.py  gunicorn.py
backend/api/: challenge.py  feature.py  statistics.py  translate.py  user.py
backend/dtos/: translate_dto.py
backend/models/: translate.py
backend/models/db/: challenge.py  features.py  translate.py
backend/models/dtos/: challenge_dto.py  feature_dto.py  stats_dto.py  translate_dto.py  user_dto.py
backend/models/sql/: challenge.py  enum.py  features.py  postgis.py  translate.py  user.py  users.py
backend/models/sqlalchemy/: translate.py
backend/services/: challenge_service.py  feature_service.py  overpass_service.py  stats_service.py  translate_service.py  user_service.py  utills.py
data_prep/: populate_to_db.py  prepare_data.ipynb
docs/: contributing.md  development-setup.md
frontend/: .env.expand  .gitignore  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  config.js  index.js
frontend/src/assets/json/: language.json  popular_tags.json
frontend/src/components/: challenegCard.js  challengeInstructions.js  error.js  footer.js  header.js  homeComponents.js  input.js  loadingModal.js  login.js  pagination.js  userProfileComponents.js
frontend/src/components/challenge/: challengeCard.js  challengeFilter.js  challengeInfo.js  challengeMap.js  challengeProgress.js
frontend/src/components/challengeCreate/: setChallengeBBOX.js  setChallengeMetdata.js  setChallengeTranslate.js  setOverpassQuery.js  setOverpassQueryTest.js
frontend/src/components/challengeEdit/: challengeMetadata.js  challengeTasks.js  drawPolygon.js  formTabs.js  translationForm.js
frontend/src/components/tagEditor/: completionBar.js  editForm.js  index.js  inputToolForm.js  map.js  sideBar.js  translate.js
frontend/src/store/: store.js
frontend/src/utills/: fetch.js  geoCodeApi.js  geomUtills.js  hooks.js  localStorage.js  mapStyle.js  osm.js  translator.js
frontend/src/views/: about.js  alternateChallengeCreate.js  authorized.js  challengeDetail.js  challengeLeaderboard.js  challenges.js  createChallenge.js  home.js  leaderboard.js  localizeChallenge.js  login.js  manageUsers.js  managementRoute.js  notFound.js  privateRoute.js  profile.js  updateChallenge.js
migrations/: alembic.ini  env.py
migrations/versions/: 07aee6916e78_.py  1bfe999ab7ad_.py  21cfac26a831_.py  34438b4017e4_.py  5adef004fb97_.py  62a3d9e9dd1c_.py  74955f887ad0_.py  7b247be5e731_.py  85b6bea15d67_.py  8ba9a722026a_.py  9e62b17b0250_.py  bf6dad02be82_.py  ccb41b10996e_.py  d0820a0ef5a7_.py
