[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Aadesh-Baral", email = "elkloppiko@gmail.com"},
]
dependencies = [
    "flask==2.1",
    "sqlalchemy>=1.4.45",
    "Werkzeug==2.1.0",
    "flask-sqlalchemy>=2.5.1",
    "Flask-Cors>=3.0.10",
    "Flask-Migrate>=4.0.0",
    "python-dotenv>=0.21.0",
    "psycopg2-binary>=2.9.5",
    "pydantic>=1.10.2",
    "pydantic-sqlalchemy>=0.0.9",
    "black>=22.12.0",
    "geoalchemy2>=0.12.5",
    "shapely>=2.0.0",
    "geojson>=2.5.0",
    "overpy>=0.6",
    "requests>=2.28.2",
    "requests-oauthlib>=1.3.1",
    "PyJWT>=2.6.0",
    "flask-httpauth>=4.7.0",
    "flask-restful>=0.3.9",
    "gunicorn>=20.1.0",
    "tornado>=6.2",
    "sentry-sdk[flask]>=1.17.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "python wsgi.py"
init = "flask db init"
migrate = "flask db migrate"
upgrade = "flask db upgrade"
downgrade = "flask db downgrade"
lint = "black wsgi.py backend migrations"
help = "flask --help"

[tool.pdm.dev-dependencies]
prepare_data = [
    "pandas>=1.5.2",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
