[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Aadesh-Baral", email = "elkloppiko@gmail.com"},
]
dependencies = [
    "flask>=3.0.3",
    "sqlalchemy>=1.4.54",
    "Werkzeug>=3.1.3",
    "flask-sqlalchemy>=3.0.5",
    "Flask-Cors>=5.0.0",
    "Flask-Migrate>=4.0.7",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=1.10.19",
    "pydantic-sqlalchemy>=0.0.9",
    "black>=24.10.0",
    "geoalchemy2>=0.15.2",
    "shapely>=2.0.6",
    "geojson>=3.1.0",
    "overpy>=0.7",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "PyJWT>=2.9.0",
    "flask-httpauth>=4.8.0",
    "flask-restful>=0.3.10",
    "gunicorn>=23.0.0",
    "tornado>=6.4.1",
    "sentry-sdk[flask]>=2.18.0",
    "cachetools>=5.5.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "python wsgi.py"
init = "flask db init"
migrate = "flask db migrate"
upgrade = "flask db upgrade"
downgrade = "flask db downgrade"
lint = "black wsgi.py backend migrations"
help = "flask --help"

[tool.pdm.dev-dependencies]
prepare_data = [
    "pandas>=1.5.2",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[dependency-groups]
prepare-data = ["pandas>=2.2.3"]
